Finished 02-flex-header

--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -23,3 +23,35 @@ a {
   /* this removes the line under the links */
   text-decoration: none;
 }
+
+/* my solution */
+
+/* 不用急着将所有元素的默认 padding 和 margin 消除，消除 ul 的就可以了。
+   而且导航栏盒子应该有 padding，这比为 item 添加 margin 的实现要好一
+   些吧。
+*/
+
+.right-links {
+  /* margin-left: auto; */
+}
+
+* {
+  margin: 0;
+  padding: 0;
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.logo {
+  margin: 10px;
+}
+
+ul {
+  display: flex;
+  gap: 10px;
+  margin: 10px;
+}
