--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -51,8 +51,8 @@ ul {
 
 /* 
    这种两分离的导航栏，把两边部分套个 div，用 space-between justify 即可。不用
-   auto margin 分离是因为此法不好再为两个部分中的 item 统一设置样式，还是各自套
-   一个盒子好，盒子里的样式设置可以相同，如此就仅用一个 rule 表达了。
+   auto margin 分离是因为此法不好再为两边部分中的 item 统一设置样式，还是各自套
+   一个盒子好，盒子里的样式设置可以相同，仅用一个 rule 就表达了。
 
    另外，涉及赋于像素 value 的情形中，具体采用 2 的幂比较好。这个例子中，两个不同类
    型的元素之间的空间为 16px，两个相同类型的元素的是 8px。
