--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -64,3 +64,33 @@ button.cancel {
   border: 1px solid #ddd;
   color: royalblue;
 }
+
+/* my solution */
+
+/* 注意将关闭按纽嵌套进 header 内，这样可以直接将其作为 Flex container 
+   操作。
+*/
+
+.modal {
+  display: flex;
+  padding: 16px;
+  gap: 16px;
+}
+
+.upper {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-weight: 700;
+  font-size: 18px;
+  margin-bottom: 8px;
+}
+
+.icon {
+  /* min-width: 42px; */
+  flex: none;
+}
+
+.text {
+  margin-bottom: 16px;
+}
