--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -25,3 +25,45 @@ input {
   width: 400px;
   margin-bottom: 16px;
 }
+
+/* my solution */
+
+/* body {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  padding: 16px;
+}
+
+.footer {
+  display: flex;
+  justify-content: space-between;
+  padding: 16px;
+  background-color: rgb(238, 238, 238);
+}
+
+a {
+  text-decoration: none;
+  color: grey;
+}
+
+ul {
+  display: flex;
+  gap: 16px;
+  list-style-type : none;
+  margin: 0;
+  padding: 0;
+}
+
+.content {
+  text-align: center;
+}
+
+.buttons > * {
+  padding: 8px 16px;
+} */
